--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <h3 class="title benefits__title">Преимущества</h3>
         <div class="benefits__items">
-          <div class="benefits__item benefits__item--1">
+          <div class="benefits__item">
             <div class="benefits__num">1</div>
             <div class="benefits__img"><img src="images/benefits-1.jpg" alt=""></div>
             <div class="benefits__info">
@@ -120,7 +120,7 @@
                 ещё точнее, быстрее и умнее.</p>
             </div>
           </div>
-          <div class="benefits__item benefits__item--3">
+          <div class="benefits__item">
             <div class="benefits__num">3</div>
             <div class="benefits__img"><img src="images/benefits-3.jpg" alt=""></div>
             <div class="benefits__info">
@@ -154,12 +154,12 @@
         <h3 class="title specification__title">Характеристики</h3>
         <div class="specification__inner">
           <div class="specification__item">
-            <div class="specification__box">
+            <div class="specification__box specification__box--1">
               <h4 class="specification__box-title">Dlog-M 10 бит</h4>
               <p class="specification__box-text">Mavic 2 Pro поддерживает цветовой профиль Dlog-M 10 бит с более широким
                 динамическим диапазоном, дающим больше возможностей для цветокоррекции.</p>
             </div>
-            <div class="specification__box">
+            <div class="specification__box specification__box--2">
               <h4 class="specification__box-title">Камера Hasselblad</h4>
               <p class="specification__box-text">Камера Hasselblad L1D-20С
                 известны эргономичным дизайном
@@ -170,12 +170,12 @@
             <img src="images/mavic.png" alt="">
           </div>
           <div class="specification__item">
-            <div class="specification__box">
+            <div class="specification__box specification__box--3">
               <h4 class="specification__box-title">Матрица CMOS 1</h4>
               <p class="specification__box-text">Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза
                 превышает показатели Mavic Pro</p>
             </div>
-            <div class="specification__box">
+            <div class="specification__box specification__box--4">
               <h4 class="specification__box-title">Видео HDR</h4>
               <p class="specification__box-text">Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить
                 к
@@ -199,7 +199,7 @@
               интеллектуальные
               функции и уникальная функция Hyperlapse (гиперлапс).</p>
           </div>
-          <div class="questions__item">
+          <div class="questions__item questions__item--active">
             <h4 class="questions__item-title">Чем Mavic 2 лучше Mavic Pro? </h4>
             <p class="questions__item-text">В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала,
               полётное время, скорость, уровень шума, обнаружение препятствий в нескольких направлениях,
@@ -271,14 +271,13 @@
             </li>
           </ul>
         </div>
+        <footer class="footer">
+          <p class="footer__copy">@ DJI, 2020</p>
+        </footer>
       </div>
     </div>
   </section>
-  <footer class="footer">
-    <div class="container">
-      <p class="footer__copy">@ DJI, 2020</p>
-    </div>
-  </footer>
+
 
 
 
