--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Drone mavic proj..</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" />
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
